@@ -1,12 +1,19 @@
+import org.apache.log4j.BasicConfigurator;
+import org.apache.log4j.Logger;
+
 import java.io.*;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class Main {
-
+    static Logger logger = Logger.getLogger(Main.class);
     public static void main(String[] args) throws IOException {
-
+        logger.warn("Application has started");
+        logger.warn("Start sorting data");
         List<String> sortedList = sortList(getList());
+        logger.warn("Starting creation of the file");
         createCsvFile(sortedList);
+        logger.warn("Application has finished");
 
     }
 
@@ -15,12 +22,12 @@ public class Main {
         File file = new File("C:\\Users\\RK445CP\\OneDrive - EY\\Desktop\\exercice1.txt");
         InputStream inputStream = new FileInputStream(file);
         BufferedReader reader = new BufferedReader(new InputStreamReader(inputStream));
-        return reader.lines().toList();
+        return reader.lines().collect(Collectors.toList());
     }
 
     private static List<String> sortList(List<String> list) {
-        List<String> sortedList = list.stream().sorted().toList();
-        sortedList.forEach(System.out::println);
+        List<String> sortedList = list.stream().sorted().collect(Collectors.toList());
+        sortedList.forEach(element -> logger.info(element));
         return sortedList;
     }
 
@@ -51,7 +58,7 @@ public class Main {
 
 
         } catch (FileNotFoundException e) {
-            e.printStackTrace();
+            logger.error("File not found exception",e);
         }
     }
 
